[metadata]
name = roborio-pkgtools
description = Tools for creating roboRIO packages for the RobotPy project
url = https://github.com/robotpy/roborio-pkgtools
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Dustin Spicuzza
author_email = robotpy@googlegroups.com

[options]
python_requires = >=3.6
install_requires =
    setuptools
    wheel
scripts =
    roborio-gen-whl
    xtar

